test/files/neg/pickle-java-crash.check
Crash.java:5: error: not found: type NotThere
    NotThere notThere();
    ^
1 error
